Redefined Schedule and Server models. Removed post and delete server endpoints
