# swagger_server/models/__init__.py
@@ -4,4 +4,5 @@
 from __future__ import absolute_import
 # import models into model package
 from swagger_server.models.schedule import Schedule
+from swagger_server.models.schedule_peak import SchedulePeak
 from swagger_server.models.server import Server
