# swagger_server/models/schedule_peak.py
@@ -1,0 +1,94 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class SchedulePeak(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, start: str=None, end: str=None):  # noqa: E501
+        """SchedulePeak - a model defined in Swagger
+
+        :param start: The start of this SchedulePeak.  # noqa: E501
+        :type start: str
+        :param end: The end of this SchedulePeak.  # noqa: E501
+        :type end: str
+        """
+        self.swagger_types = {
+            'start': str,
+            'end': str
+        }
+
+        self.attribute_map = {
+            'start': 'start',
+            'end': 'end'
+        }
+
+        self._start = start
+        self._end = end
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'SchedulePeak':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The Schedule_peak of this SchedulePeak.  # noqa: E501
+        :rtype: SchedulePeak
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def start(self) -> str:
+        """Gets the start of this SchedulePeak.
+
+
+        :return: The start of this SchedulePeak.
+        :rtype: str
+        """
+        return self._start
+
+    @start.setter
+    def start(self, start: str):
+        """Sets the start of this SchedulePeak.
+
+
+        :param start: The start of this SchedulePeak.
+        :type start: str
+        """
+        if start is None:
+            raise ValueError("Invalid value for `start`, must not be `None`")  # noqa: E501
+
+        self._start = start
+
+    @property
+    def end(self) -> str:
+        """Gets the end of this SchedulePeak.
+
+
+        :return: The end of this SchedulePeak.
+        :rtype: str
+        """
+        return self._end
+
+    @end.setter
+    def end(self, end: str):
+        """Sets the end of this SchedulePeak.
+
+
+        :param end: The end of this SchedulePeak.
+        :type end: str
+        """
+        if end is None:
+            raise ValueError("Invalid value for `end`, must not be `None`")  # noqa: E501
+
+        self._end = end
